# SolitaireProject

./: CMakeLists.txt  README.md
src/: cards.hpp  decks.hpp  main.cpp  solitaire_game.hpp
